@@ -5,9 +5,9 @@ file {
 }
 display {
 	object {
-		x=1140
-		y=209
-		width=701
+		x=1261
+		y=109
+		width=721
 		height=130
 	}
 	clr=14
@@ -91,7 +91,7 @@ rectangle {
 	object {
 		x=0
 		y=25
-		width=700
+		width=720
 		height=100
 	}
 	"basic attribute" {
@@ -102,7 +102,7 @@ rectangle {
 	object {
 		x=0
 		y=0
-		width=700
+		width=720
 		height=22
 	}
 	"basic attribute" {
@@ -124,7 +124,7 @@ text {
 }
 "text update" {
 	object {
-		x=505
+		x=525
 		y=3
 		width=120
 		height=15
@@ -949,4 +949,167 @@ text {
 		clr=14
 	}
 	textix="SWSTAT"
+}
+text {
+	object {
+		x=647
+		y=32
+		width=20
+		height=15
+	}
+	"basic attribute" {
+		clr=14
+	}
+	textix="DEC"
+	align="horiz. centered"
+}
+text {
+	object {
+		x=676
+		y=32
+		width=20
+		height=15
+	}
+	"basic attribute" {
+		clr=14
+	}
+	textix="HOLD"
+	align="horiz. centered"
+}
+byte {
+	object {
+		x=644
+		y=58
+		width=25
+		height=11
+	}
+	monitor {
+		chan="$(FPREFIX):$(FNAME)_SWREQ"
+		clr=50
+		bclr=54
+	}
+	ebit=15
+}
+byte {
+	object {
+		x=673
+		y=58
+		width=25
+		height=11
+	}
+	monitor {
+		chan="$(FPREFIX):$(FNAME)_SWREQ"
+		clr=50
+		bclr=54
+	}
+	sbit=16
+	ebit=16
+}
+byte {
+	object {
+		x=644
+		y=46
+		width=25
+		height=11
+	}
+	monitor {
+		chan="$(FPREFIX):$(FNAME)_SWMASK"
+		clr=31
+		bclr=56
+	}
+	ebit=15
+}
+byte {
+	object {
+		x=673
+		y=46
+		width=25
+		height=11
+	}
+	monitor {
+		chan="$(FPREFIX):$(FNAME)_SWMASK"
+		clr=31
+		bclr=56
+	}
+	sbit=16
+	ebit=16
+}
+byte {
+	object {
+		x=643
+		y=88
+		width=25
+		height=11
+	}
+	monitor {
+		chan="$(FPREFIX):$(FNAME)_SWSTAT"
+		clr=50
+		bclr=54
+	}
+	ebit=15
+}
+byte {
+	object {
+		x=672
+		y=88
+		width=25
+		height=11
+	}
+	monitor {
+		chan="$(FPREFIX):$(FNAME)_SWSTAT"
+		clr=50
+		bclr=54
+	}
+	sbit=16
+	ebit=16
+}
+polygon {
+	object {
+		x=650
+		y=70
+		width=11
+		height=16
+	}
+	"basic attribute" {
+		clr=20
+		width=3
+	}
+	"dynamic attribute" {
+		vis="calc"
+		calc="(B&32768) && ((A&32768) != (C&32768))"
+		chan="$(FPREFIX):$(FNAME)_SWSTAT"
+		chanB="$(FPREFIX):$(FNAME)_SWMASK"
+		chanC="$(FPREFIX):$(FNAME)_SWREQ"
+	}
+	points {
+		(650,70)
+		(661,70)
+		(655,86)
+		(650,70)
+	}
+}
+polygon {
+	object {
+		x=680
+		y=70
+		width=11
+		height=16
+	}
+	"basic attribute" {
+		clr=20
+		width=3
+	}
+	"dynamic attribute" {
+		vis="calc"
+		calc="(B&65536) && ((A&65536) != (C&65536))"
+		chan="$(FPREFIX):$(FNAME)_SWSTAT"
+		chanB="$(FPREFIX):$(FNAME)_SWMASK"
+		chanC="$(FPREFIX):$(FNAME)_SWREQ"
+	}
+	points {
+		(680,70)
+		(691,70)
+		(685,86)
+		(680,70)
+	}
 }
